--- a/blog/templates/blog/article_form.html
+++ b/blog/templates/blog/article_form.html
@@ -1,8 +1,14 @@
 {% extends 'blog/base.html' %}
 
 {% block title_block %}
+New Article
 {% endblock %}
 
 {% block content%}
+
+  <form method="POST">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <input class="btn btn-success" type="Submit" value="Save">
+  </form>
 {% endblock %}
-  
