--- a/accounts/templates/accounts/base.html
+++ b/accounts/templates/accounts/base.html
@@ -20,7 +20,7 @@
         </button>
 
         <!-- Collapsible NavBar -->
-        <!-- <div class="collapse navbar-collapse" id='navbarSupportedContent'>
+        <div class="collapse navbar-collapse" id='navbarSupportedContent'>
           <ul class="navbar-nav mr-auto">
             <li class='nav-item'>
               <a class='nav-link' href="#">something</a>
@@ -31,38 +31,32 @@
             <li class='nav-item'>
               <a class='nav-link' href="#">something</a>
             </li>
-          </ul> -->
-
+          </ul>
           <ul class="navbar-nav ml-auto">
-
-            {% if user.is_authenticated %}
             <li class='nav-item'>
               <a class='nav-link' href="{% url 'blog:article_create_new'%}">New Article</a>
             </li>
             <li class='nav-item'>
               <a class='nav-link' href="{% url 'blog:article_drafts'%}">Drafts</a>
             </li>
-            <!-- <li class='nav-item'>
+            <li class='nav-item'>
               <a class='nav-link' href="#">something</a>
-            </li> -->
-
+            </li>
+            {% if user.is_authenticated %}
               <li class='nav-item dropdown'>
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  {{ user.get_username | title }}
+                  Account
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <a class="dropdown-item" href="#">Profile</a>
                   <!-- <a class="dropdown-item" href="#">Another action</a> -->
                   <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" href="{%url 'accounts:logout' %}">Logout</a>
+                  <a class="dropdown-item" href="#">Logout</a>
                 </div>
               </li>
             {% else %}
             <li class='nav-item'>
-              <a class='nav-link' href="{% url 'accounts:usersignup' %}">Register</a>
-            </li>
-            <li class='nav-item'>
-              <a class='nav-link' href="{% url 'accounts:login' %}">Login</a>
+              <a class='nav-link' href="#">Login</a>
             </li>
             {% endif %}
 
@@ -71,7 +65,6 @@
       </div>
 
     </nav>
-    <hr>
     <div class="container">
       {% block content%}
       {% endblock %}
