--- a/blog/templates/blog/article_confirm_delete.html
+++ b/blog/templates/blog/article_confirm_delete.html
@@ -5,9 +5,11 @@ Delete {{ object }}
 {% endblock %}
 
 {% block content%}
-  <form method="post">
-    {% csrf_token %}
-    <p>Are you sure you want to delete {{ object }}?</p>
-    <input type="submit" class="btn btn-danger" value="Delete">
-  </form>
+  <div class="container">
+    <form method="post">
+      {% csrf_token %}
+      <p>Are you sure you want to delete {{ object }}?</p>
+      <input type="submit" class="btn btn-danger" value="Delete">
+    </form>
+  </div>
 {% endblock %}
