--- a/blog/templates/blog/topic_list.html
+++ b/blog/templates/blog/topic_list.html
@@ -6,17 +6,19 @@ Engineers Blog
 
 {% block content%}
 <br>
-  <div class="row">
-    {% for topic in topic_list %}
-      <div class="col-sm-4">
-        <div class="jumbotron">
-            <!-- <img src="../static/blog/imgs/django-logo-big.jpg" class="img-thumbnail" alt="{{ topic.topic_name }}"> -->
-            <a href="{% url 'blog:topic_articles_list' pk=topic.pk %}">
-              <h3>{{ topic.topic_name }}</h3>
-            </a>
+  <div class="container">
+    <div class="row">
+      {% for topic in topic_list %}
+        <div class="col-sm-4">
+          <div class="jumbotron">
+              <!-- <img src="../static/blog/imgs/django-logo-big.jpg" class="img-thumbnail" alt="{{ topic.topic_name }}"> -->
+              <a class='topicListClass' href="{% url 'blog:topic_articles_list' pk=topic.pk %}">
+                <h3>{{ topic.topic_name }}</h3>
+              </a>
+          </div>
         </div>
-      </div>
-    {% endfor %}
+      {% endfor %}
+    </div>
   </div>
 
 {% endblock %}
