--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -6,9 +6,9 @@
 <br>
   <div class="container">
     <div class="row">
-      <div class="col-sm-4">
+      <div class="col-sm-3">
       </div>
-      <div class="col-sm-6">
+      <div class="col-sm-5">
         <h1>Login</h1>
         {% if form.errors %}
         <div class="alert alert-danger" role="alert">
@@ -24,9 +24,10 @@
               <input type="password" class="form-control" name="password" value="" placeholder="Password"><br>
             </div>
             <div class="form-group">
-              <input type="Submit" class="form-control" class='btn btn-success' name="" value="Login">
+              <input type="Submit" class="form-control btn btn-primary" name="" value="Login">
             </div>
           </form>
+          <p>Don't have an account? <a href="{% url 'accounts:usersignup' %}">register here</a></p>
       </div>
     </div>
   </div>
