--- a/blog/templates/blog/drafts_article_list.html
+++ b/blog/templates/blog/drafts_article_list.html
@@ -3,5 +3,7 @@
 {% block title_block %}
 {% endblock %}
 
-{% block content%}
-{% endblock %}
+<div class="container">
+  {% block content%}
+  {% endblock %}
+</div>
