--- a/blog/templates/blog/topic_form.html
+++ b/blog/templates/blog/topic_form.html
@@ -1,13 +1,13 @@
 {% extends 'blog/base.html' %}
 
 {% block title_block %}
-New Article
+New Topic
 {% endblock %}
 
 {% block content%}
 
 <div class="container">
-  <h1>New Article</h1>
+  <h1>New Topic/Subject</h1>
   <form method="POST">
     {% csrf_token %}
     {{ form.as_p }}
