Changes in the model. Chapter Model added. Tutorial structure for the blog.

--- a/blog/static/blog/css/styles.css
+++ b/blog/static/blog/css/styles.css
@@ -16,13 +16,12 @@ body{
   padding-bottom: 10px;
 }
 
-.brandLogoClass{
-  font-size: 1.8em;
-  font-family: 'Nunito', sans-serif;
-}
-
 .articleTitleClass{
   text-align: left;
+}
+
+.ArticleActionButtons{
+  float: right;
 }
 
 .articleContentClass{
@@ -37,6 +36,7 @@ body{
 .topicListClass a:link{
   color:black;
 }
+
 .footerBrand{
   font-size: 1.6em;
   color: black
