--- a/blog/templates/blog/article_list.html
+++ b/blog/templates/blog/article_list.html
@@ -1,55 +1,17 @@
 {% extends 'blog/base.html' %}
 
 {% block title_block %}
-  {% if article_list %}
-    {% with article_list|first as firstarticle%}
-      {{ firstarticle.topic_name }}
-    {% endwith %}
-  {% else %}
-    Articles
-  {% endif %}
+Engineers Blog
 {% endblock %}
 
 {% block content%}
-<div class="container">
-  <br>
-    {% if article_list %}
-
+<br>
+  <div class="container">
+    <ul>
       {% for article in article_list %}
-
-        <!-- Article Title -->
-        <a href="{% url 'blog:article_detail' pk=article.pk %}">
-          <h4>{{ article.title }}</h4>
-        </a>
-
-        <!-- Article Published or Created Date -->
-        {% if article.published_date %}
-        <p>Published Date: {{ article.published_date }}</p>
-        {% else %}
-        <p>Created Date: {{ article.created_date }}</p>
-        {% endif %}
-
-        <!-- Article Author -->
-        <p>
-          Author: <a href="{% url 'blog:author_articles_list' pk=article.author.id %}">
-            {% if article.author.first_name %}
-              {{ article.author.first_name }} {{ article.author.last_name }}
-            {% else %}
-              {{ article.author }}
-            {% endif %}
-          </a>
-        </p>
-
-        <hr>
-
+        <li>{{article.title}}</li>
       {% endfor %}
+    </ul>
+  </div>
 
-    {% else %}
-      <h4>No articles found</h4>
-      <a href="{% url 'blog:article_create_new' %}">
-        <button type="button" class="btn btn-success WriteArticleButton" name="button">Write Article</button>
-      </a>
-    {% endif %}
-
-</div>
 {% endblock %}
