--- a/blog/templates/blog/article_detail.html
+++ b/blog/templates/blog/article_detail.html
@@ -9,31 +9,64 @@
 
   <div class="container">
     <div class="row">
-      <div class="col-sm-2"></div>
+      <div class="col-sm-2">
+        <table>
+          {% for each_chapter in chapters_list %}
+          <tr>
+            <th>
+              {{ each_chapter }}
+            </th>
+          </tr>
+            {% for each_article in articles_list %}
+              {% if each_article.chapter_name == each_chapter %}
+                <tr>
+                  <td>
+                    <a href="{% url 'blog:article_detail' pk=each_article.pk %}">&emsp;{{ each_article }}</a>
+                  </td>
+                </tr>
+              {% endif %}
+            {% endfor %}
+          {% endfor %}
+        </table>
+      </div>
       <div class="col-sm-8">
+        <div class="jumbotron">
+          <h1 class="articleTitleClass">{{ article.title }}</h1>
+            <div class="aboutArticleData">
+              <div class="authorClass">
+                    Author: <a href="#">
+                      {% if article.author.first_name %}
+                        {{ article.author.first_name }} {{ article.author.last_name }}
+                      {% else %}
+                        {{ article.author }}
+                      {% endif %}
+                    </a>
+              </div>
 
-        <h1 class="articleTitleClass">{{ article.title }}</h1>
-        <hr>
+              {% if article.published_date %}
+                <div class="publishDateClass">
+                  <i class="fa fa-calendar"></i> {{ article.published_date|localtime }}
+                </div>
+              {% endif %}
+              <!-- BUTTONS -->
+              <hr>
+                {% if user.is_authenticated and user.is_staff %}
+                  {% if not article.published_date %}
+                  <button class='btn btn-outline-warning btn-sm' type="button" name="button">
+                    <a href="{% url 'blog:article_publish' pk=article.pk %}"></a>Publish
+                  </button>
+                  {% endif %}
 
-        <div class="authorClass">
-              Author: <a href="{% url 'blog:author_articles_list' pk=article.author.id %}">
-                {% if article.author.first_name %}
-                  {{ article.author.first_name }} {{ article.author.last_name }}
-                {% else %}
-                  {{ article.author }}
+                <button class='btn btn-info btn-sm' type="button" name="button">
+                  <a  href="{% url 'blog:article_edit' pk=article.pk %}"></a>Update
+                </button>
+
+                <button class='btn btn-danger btn-sm' type="button" name="button">
+                  <a href="{% url 'blog:article_remove' pk=article.pk %}"></a>Delete
+                </button>
                 {% endif %}
-              </a>
+            </div>
         </div>
-
-        {% if article.published_date %}
-        <div class="publishDateClass">
-          published: {{ article.published_date|localtime }}
-        </div>
-        {% else %}
-          <a class='btn btn-outline-warning btn-sm' href="{% url 'blog:article_publish' pk=article.pk %}">Publish</a>
-        {% endif %}
-
-        <hr>
 
         <div class="articleContentClass">
             {{ article.article_content|safe }}
@@ -41,9 +74,10 @@
         <br>
         <h4>References:</h4>
         <p>{{article.references|safe}}</p>
+        <br>
 
         <!-- COMMENTS -->
-        {% if comments.count == 1 %}
+        <!-- {% if comments.count == 1 %}
           <h6>{{ comments.count }} Comment</h6>
         {% else %}
         <h6>{{ comments.count }} Comments</h6>
@@ -58,12 +92,12 @@
             <br>
           </div>
         {% endfor %}
-        <br>
+        <br> -->
         <!-- COMMENTS -->
 
         <!-- NEW COMMENTS FORM -->
         <!-- Comment form -->
-        <div class="container">
+        <!-- <div class="container">
           <div class="jumbotron">
             <h5>Your Comment</h5>
               <form class="" method="post">
@@ -80,11 +114,11 @@
                 <input type="Submit" class='btn btn-info' name="" value="Save">
               </form>
           </div>
-        </div>
+        </div> -->
         <!-- NEW COMMENTS FORM -->
 
       </div>
-      <div class="col-sm-2"></div>
+      <div class="col-sm-1"></div>
     </div>
   </div>
 {% endblock %}
