--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -27,10 +27,9 @@
 
   </head>
   <body>
-    <nav class='navbar navbar-expand-sm navbar-light mynavi'>
-      <div class="container">
+    <nav class='navbar navbar-expand-sm navbar-light'>
         <!-- Brand -->
-        <a class='navbar-brand brandLogoClass' href="{% url 'blog:topic_list' %}"><b>Engineers</b> Blog</a>
+        <a class='navbar-brand BrandLogo' href="{% url 'blog:subject_list' %}"><b>Engineers</b> Blog</a>
         <!-- Toggle Button -->
         <button class='navbar-toggler' type="button" data-toggle='collapse' data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggle-icon" aria-hidden='true'></span>
@@ -49,27 +48,32 @@
               <a class='nav-link' href="#">something</a>
             </li>
           </ul> -->
-
           <ul class="navbar-nav ml-auto">
-            <li class='nav-item'>
-              <a class='nav-link' href="{% url 'blog:topic_create_new'%}">New Topic</a>
-            </li>
-            <li class='nav-item'>
-              <a class='nav-link' href="{% url 'blog:article_create_new'%}">New Article</a>
-            </li>
-            <li class='nav-item'>
-              <a class='nav-link' href="{% url 'blog:article_drafts'%}">Drafts</a>
-            </li>
-
+            {% if user.is_staff %}
+              <li class='nav-item'>
+                <a class='nav-link' href="{% url 'blog:subject_create_new'%}">New Subject</a>
+              </li>
+              <li class='nav-item'>
+                <a class='nav-link' href="{% url 'blog:chapter_create_new'%}">New Chapter</a>
+              </li>
+              <li class='nav-item'>
+                <a class='nav-link' href="{% url 'blog:article_create_new'%}">New Article</a>
+              </li>
+              <li class='nav-item'>
+                <a class='nav-link' href="{% url 'blog:article_drafts' %}">Drafts</a>
+              </li>
+            {% endif %}
             {% if user.is_authenticated %}
               <li class='nav-item dropdown'>
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  {{ user.get_username | title }}
+                  {{ user.get_username}}
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="#">Profile</a>
-                  <!-- <a class="dropdown-item" href="#">Another action</a> -->
-                  <div class="dropdown-divider"></div>
+                  {% if user.is_staff %}
+                    <a class="dropdown-item" href="#">Profile</a>
+                    <!-- <a class="dropdown-item" href="#">Another action</a> -->
+                    <div class="dropdown-divider"></div>
+                  {% endif %}
                   <a class="dropdown-item" href="{%url 'accounts:logout' %}">Logout</a>
                 </div>
               </li>
@@ -85,7 +89,6 @@
           </ul>
         </div>
       </div>
-
     </nav>
 
         {% block content%}
@@ -96,7 +99,7 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-4">
-            <a class="footerBrand" style="font-size:1.6em" href="{% url 'blog:topic_list' %}"><b>Engineers</b> Blog</a>
+            <a class="footerBrand" style="font-size:1.6em" href="{% url 'blog:subject_list' %}"><b>Engineers</b> Blog</a>
             <table border="0">
               <tr>
                 <td>
