Bug fixes and updates

--- a/blog/templates/blog/about.html
+++ b/blog/templates/blog/about.html
@@ -8,6 +8,8 @@ About
 <div class="container">
   <div class="jumbotron">
     <h1>About Us</h1>
+    <p>Will be updated soon</p>
+    <p>Contact Admin to create tutorials. <a href="<a href="mailto:sudheerduggireddy@gmail.com>Sudheer Duggireddy</a></p>
   </div>
 
 </div>
