--- a/static/blog/css/styles.css
+++ b/static/blog/css/styles.css
@@ -20,8 +20,8 @@ body{
   text-align: left;
 }
 
-.aboutArticleData button{
-  float:right;
+.ArticleActionButtons{
+  float: right;
 }
 
 .articleContentClass{
